<resources>
    <string name="app_name">DiscountMania</string>

    <string name="lgn"> Login for a smooth experience</string>
    <string name="category">Category</string>

    <string name="hint_name">Name</string>
    <string name="hint_shp_name">Shop Name</string>
    <string name="hint_own_name">Owner Name</string>
    <string name="hint_des">Description about business(3000)</string>
    <string name="hint_addresh">Addresh</string>
    <string name="hint_product">Product or Services</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_password">Password</string>
    <string name="hint_con_password">Confirm Password</string>
    <string name="hint_otp">Enter OTP</string>

    <string name="btn_register">REGISTER</string>
    <string name="btn_updt">UPDATE</string>
    <string name="btn_otp">Send OTP</string>
    <string name="btn_reset">Reset Password</string>
    <string name="btn_forgot">Forgot Password?</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_link_to_login2">Login Me.</string>
    <string name="title_activity_mer_main">MerMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_main">UserMain</string>
    <string name="title_activity_admin_main">AdminMain</string>
    <string name="title_activity_sub_admin_main">SubAdminMain</string>
    <string name="title_activity_merchant_main">MerchantMain</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="category">
        <item>Restaurants</item>
        <item>Daily Needs</item>
        <item>Entertainment</item>
        <item>Travel</item>
        <item>Grocery</item>
        <item>Electronics</item>+
        <item>Medical &#38; Labs</item>
        <item>Hospital</item>
        <item>Furniture</item>
        <item>Wedding</item>
        <item>Fashion</item>
        <item>Education</item>
        <item>Repairs</item>
        <item>Construction</item>
        <item>Fitness</item>
        <item>Hotels</item>
        <item>Door Step</item>
        <item>Others</item>
    </string-array>

    <string-array name="district">
        <item>Jodhpur</item>
    </string-array>

    <string-array name="state">
        <item>Rajasthan</item>
    </string-array>

    <string name="GPSAlertDialogTitle">Location Required</string>
    <string name="GPSAlertDialogMessage">Give GPS permission</string>
    <string name="cancel">Cancel</string>

    <string name="mer_tab_text_1">Overview</string>
    <string name="mer_tab_text_2">Products</string>
    <string name="mer_tab_text_3">Offers</string>
    <string name="mer_tab_text_4">Reviews</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="shpname">Business Details</string>
    <string name="title_activity_merchant_update_pf">Update Profile</string>
    <string name="mer_upt_tab_text_1">General</string>
    <string name="mer_upt_tab_text_2">Products</string>
    <string name="mer_upt_tab_text_3">Banner</string>

    <string name="admer_upt_tab_text_1">Business Icon</string>
    <string name="admer_upt_tab_text_2">Products</string>
    <string name="admer_upt_tab_text_3">Banner</string>

    <string name="title_activity_mer_details">MerDetailsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="action_search">Search</string>
    <string name="search_hint"> Business Name…</string>
    <string name="title_activity_admin_add_mer_img">Add Images</string>

</resources>
