<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ResetPassActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">



        <EditText
            android:id="@+id/mob"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/input_register_bg"
            android:ems="10"
            android:hint="@string/hint_mobile"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mob"
            android:layout_marginTop="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />



        <EditText
            android:id="@+id/conpass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_con_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conpass"
            android:layout_marginTop="10dp"
            android:background="@color/input_register_bg"
            android:ems="10"
            android:hint="@string/hint_otp"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        <Button
            android:id="@+id/btnOtp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/otp"
            android:layout_alignBaseline="@+id/otp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:text="@string/btn_otp"
            android:textColor="@color/colorPrimary" />

        <!-- Login Button -->

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimary"
            android:text="@string/btn_reset"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRegister"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login2"
            android:textAllCaps="false"
            android:textColor="@color/input_login"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>